k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: git-app-service
  namespace: new-assignment
spec:
  selector:
    app: github-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
